--- a/resources/MyTunes.fxml
+++ b/resources/MyTunes.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="450" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.MyTunes_light.GUI.Controller.MyTunesController">
+<VBox prefHeight="450" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.MyTunes.GUI.Controller.MyTunesController">
    <children>
       <AnchorPane prefHeight="102.0" prefWidth="640.0">
          <children>
