--- a/resources/MyTunes.fxml
+++ b/resources/MyTunes.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="450" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.MyTunes.GUI.Controller.MyTunesController">
+<VBox prefHeight="450" prefWidth="900.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.MyTunes.GUI.Controller.MyTunesController">
    <children>
       <AnchorPane prefHeight="102.0" prefWidth="640.0">
          <children>
@@ -28,8 +28,8 @@
             <TextField fx:id="txtFieldSeach" layoutX="691.0" layoutY="24.0" prefHeight="26.0" prefWidth="84.0" />
             <Button fx:id="searchBTN" layoutX="775.0" layoutY="24.0" mnemonicParsing="false" text="Search" />
             <Slider fx:id="sliderTime" layoutX="300.0" layoutY="39.0" prefHeight="16.0" prefWidth="242.0" />
-            <Label fx:id="lblCurrentDuration" layoutX="259.0" layoutY="38.0" text="Label" />
-            <Label fx:id="lblMaxDuration" layoutX="549.0" layoutY="38.0" text="Label" />
+            <Label fx:id="lblCurrentDuration" layoutX="259.0" layoutY="38.0" />
+            <Label fx:id="lblMaxDuration" layoutX="549.0" layoutY="38.0" />
             <Label fx:id="lblSongName" layoutX="334.0" layoutY="16.0" />
          </children>
       </AnchorPane>
@@ -93,7 +93,7 @@
             <VBox prefHeight="370.0" prefWidth="388.0">
                <children>
                   <Label text="Songs" />
-                  <TableView fx:id="tblViewSongs" prefHeight="358.0" prefWidth="388.0">
+                  <TableView fx:id="tblViewSongs" prefHeight="282.0" prefWidth="388.0">
                      <columns>
                         <TableColumn fx:id="songTitleCol" prefWidth="130.0" text="Title" />
                         <TableColumn fx:id="songArtistCol" prefWidth="108.0" text="Artist" />
@@ -107,14 +107,25 @@
       </HBox>
       <HBox prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Button fx:id="closeBtn" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnCloseWindow" prefHeight="26.0" prefWidth="57.0" text="Close">
+            <Button mnemonicParsing="false" onAction="#btnCreateSong" text="New ">
                <HBox.margin>
-                  <Insets left="650.0" top="5.0" />
+                  <Insets bottom="5.0" left="600.0" right="5.0" top="5.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" onAction="#btnCreateSong" text="New " />
-            <Button fx:id="btnEditSong" mnemonicParsing="false" onAction="#btnEditSong" text="Edit" />
-            <Button mnemonicParsing="false" onAction="#btnDeleteSong" text="Delete" />
+            <Button fx:id="btnEditSong" mnemonicParsing="false" onAction="#btnEditSong" text="Edit">
+               <HBox.margin>
+                  <Insets right="5.0" top="5.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#btnDeleteSong" text="Delete">
+               <HBox.margin>
+                  <Insets right="10.0" top="5.0" />
+               </HBox.margin></Button>
+            <Button fx:id="closeBtn" alignment="BOTTOM_LEFT" mnemonicParsing="false" onAction="#btnCloseWindow" prefHeight="26.0" prefWidth="57.0" text="Close">
+               <HBox.margin>
+                  <Insets left="20.0" right="25.0" top="5.0" />
+               </HBox.margin>
+            </Button>
          </children>
       </HBox>
    </children>
